feat: Add baseUrl when registering a store
